Added ticket creation and updation api
