# swagger/v1/swagger.json
@@ -262,7 +262,7 @@
             "name": "project_id",
             "in": "query",
             "type": "integer",
-            "required": true
+            "optional": true
           },
           {
             "name": "assigned_user_id",
@@ -283,6 +283,168 @@
           },
           "401": {
             "description": ""
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a ticket",
+        "tags": [
+          "Ticket"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "Authentication token"
+          },
+          {
+            "name": "ticket",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ticket": {
+                  "properties": {
+                    "title": {
+                      "type": "string"
+                    },
+                    "ticket_no": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
+                    "category": {
+                      "type": "string"
+                    },
+                    "status": {
+                      "type": "status"
+                    },
+                    "maximum_permitted_time": {
+                      "type": "string"
+                    },
+                    "start_date": {
+                      "type": "string"
+                    },
+                    "end_date": {
+                      "type": "string"
+                    },
+                    "assigned_user_id": {
+                      "type": "integer"
+                    },
+                    "created_user_id": {
+                      "type": "integer"
+                    },
+                    "created_user_type": {
+                      "type": "string"
+                    }
+                  }
+                }
+              },
+              "required": [
+                "title",
+                "ticket_no",
+                "start_date",
+                "created_user_id",
+                "created_user_type"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          },
+          "401": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/v1/tickets/{id}/": {
+      "put": {
+        "summary": "Updates ticket",
+        "tags": [
+          "Ticket"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "Authentication token"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "ticket",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ticket": {
+                  "properties": {
+                    "title": {
+                      "type": "string"
+                    },
+                    "ticket_no": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
+                    "category": {
+                      "type": "string"
+                    },
+                    "status": {
+                      "type": "status"
+                    },
+                    "maximum_permitted_time": {
+                      "type": "string"
+                    },
+                    "start_date": {
+                      "type": "string"
+                    },
+                    "end_date": {
+                      "type": "string"
+                    },
+                    "assigned_user_id": {
+                      "type": "integer"
+                    },
+                    "created_user_id": {
+                      "type": "integer"
+                    },
+                    "created_user_type": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user updated"
           }
         }
       }
